Add: handshake endpoint
