# app/backend/docs/swagger.yaml
@@ -1,5 +1,10 @@
 basePath: /
 definitions:
+  types.HandshakePayload:
+    properties:
+      user_id:
+        type: integer
+    type: object
   types.SignInPayload:
     properties:
       email:
@@ -57,6 +62,36 @@ paths:
           schema:
             type: string
       summary: Ping
+  /api/v1/handshake:
+    post:
+      consumes:
+      - application/json
+      description: send match request
+      parameters:
+      - description: recipient id
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/types.HandshakePayload'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: Handshake
   /api/v1/login:
     post:
       consumes:
